// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name should render 1`] = `
<div>
  <td
    class="name-cell-root"
  >
    <div
      class="content-container"
    >
      <div
        class="text-truncate"
      >
        <div
          class="table-title text-truncate"
        >
          foo
        </div>
        <div
          class="secondary-info text-truncate"
        >
          bar
        </div>
      </div>
    </div>
  </td>
</div>
`;

exports[`Name should render with secondary info 1`] = `
<div>
  <td
    class="name-cell-root"
  >
    <div
      class="content-container"
    >
      <div
        class="text-truncate"
      >
        <div
          class="table-title text-truncate"
        >
          <a
            class="text-truncate"
            data-discover="true"
            href="/foo/test"
          >
            foo
          </a>
        </div>
        <div
          class="secondary-info text-truncate"
        >
          bar
        </div>
      </div>
    </div>
  </td>
</div>
`;
